[workspace]
members = [
    "bpf",
    #"bpf-backtrace",
    "bpf-macros",
    "bpf-helpers",
    "bpf-helpers-sys",
    "bpf-probes",
    "bpf-utils",
    "ehframe",
    "examples/allprobes",
    "examples/allprobes/probe",
    "examples/rust-analysis",
    "examples/rust-analysis/probe",
    "examples/syscount",
    "examples/syscount/probe",
]

[patch.crates-io]
addr2line = { path = "../addr2line" }
object = { path = "../object" }
