[workspace]
members = [
    "bpf",
    "bpf-backtrace",
    "bpf-macros",
    "bpf-helpers",
    "bpf-helpers-sys",
    "bpf-probes",
    "bpf-utils",
    "cargo-trace",
    "cargo-trace/probe",
    "ehframe",
    "examples/allprobes",
    "examples/allprobes/probe",
    "examples/syscount",
    "examples/syscount/probe",
]

[patch.crates-io]
addr2line = { git = "https://github.com/gimli-rs/addr2line" }

[profile.release]
debug = true
