[package]
name = "bpf-helpers"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
bpf-helpers-sys = { version = "0.1.0", path = "../bpf-helpers-sys" }
bpf-macros = { version = "0.1.0", path = "../bpf-macros" }
cty = { version = "0.2.1", default-features = false }
