[package]
name = "bpf-macros"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
bpf-utils = { version = "0.1.0", path = "../bpf-utils" }
heck = "0.3.2"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["full"] }

[dev-dependencies]
bpf-helpers = { path = "../bpf-helpers" }
