[package]
name = "bpf-probes"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bpf-utils = { version = "0.1.0", path = "../bpf-utils" }
libbpf-rs = "0.7.0"
libc = "0.2.84"
log = "0.4.14"
perf-event-open-sys = "1.0.1"
thiserror = "1.0.23"
