[package]
name = "bpf-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
addr2line = { path = "../../addr2line" }
anyhow = "1.0.38"
cargo-subcommand = "0.4.10"
libc = "0.2.84"
memmap = "0.7.0"
moria = { path = "../../moria" }
nix = "0.19.1"
spawn-ptrace = "0.1.2"
thiserror = "1.0.23"
