[package]
name = "bpf-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
addr2line = "0.14.1"
anyhow = "1.0.38"
cargo-subcommand = "0.5.0"
ehframe = { path = "../ehframe" }
libc = "0.2.86"
locate-dwarf = "0.1.0"
log = "0.4.14"
memmap = "0.7.0"
ptracer = "0.3.1"
thiserror = "1.0.23"
