[package]
name = "bpf"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bpf-helpers = { version = "0.1.0", path = "../bpf-helpers" }
bpf-probes = { version = "0.1.0", path = "../bpf-probes" }
bpf-utils = { version = "0.1.0", path = "../bpf-utils" }
libbpf-rs = "0.6.2"
sudo = "0.6.0"
zerocopy = "0.3.0"
