[package]
name = "cargo-trace"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[build-dependencies]
cargo-bpf = "1.3.0"

[dependencies]
anyhow = "1.0.38"
bpf = { version = "0.1.0", path = "../bpf" }
cargo-subcommand = "0.5.0"
env_logger = "0.8.3"
log = "0.4.14"
zerocopy = "0.3.0"
